# apify-actor-skill

./: .gitignore  README.md
.github/workflows/: package-skill.yml
apify-actor/: SKILL.md
apify-actor/assets/python-template/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
apify-actor/assets/python-template/.actor/: ACTOR.md  actor.json  input_schema.json  output_schema.json
apify-actor/assets/python-template/.actor/datasets/: dataset_schema.json
apify-actor/assets/python-template/src/: __main__.py  main.py
apify-actor/references/: input-schema.md  output-schema.md  python-sdk.md  standby-mode.md
