[project]
name = "apify-actor"
version = "0.1.0"
description = "Apify Actor template"
requires-python = ">=3.13"
dependencies = [
    "apify>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.14.0",
    "pre-commit>=4.0.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
